syntax = "proto3";
package pb;

import "base.proto";

option go_package = "api/pb";

service TodoSvc {
  rpc CreateTodo(TodoRequest) returns (StateReply) {}
  rpc GetTodo(TodoRequest) returns (TodoReply) {}
  rpc GetTodos(TodoRequest) returns (TodosReply) {}
  rpc GetRemindTodos(TodoRequest) returns (TodosReply) {}
  rpc DeleteTodo(TodoRequest) returns (StateReply) {}
  rpc UpdateTodo(TodoRequest) returns (StateReply) {}
  rpc CompleteTodo(TodoRequest) returns (StateReply) {}
}

message TodoRequest {
  Todo todo = 1;
}

message TodoReply {
  Todo todo = 1;
}

message TodosReply {
  repeated Todo todos = 1;
}

message Todo {
  int64 id = 1;
  string content = 2;
  string category = 3;
  string remark = 4;
  int64 priority = 5;
  bool isRemindAtTime = 6;
  string remindAt = 7;
  string repeatMethod = 8;
  string repeatRule = 9;
  string repeatEndAt = 10;
  bool complete = 11;
  string created_at = 12;
  string updated_at = 13;
}
